<resources>
    <string name="app_name">Big Brother CV</string>
    <string name="reportName">Report</string>
    <string name="live">Live Updates</string>
    <string name="action_settings">Settings</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="notifiers">Choose Notifiers:</string>
    <string name="placeholder">Placeholder</string>
    <string name="report">Produce Report</string>
    <string name="time">Report Time</string>
    <string name="important">Important Events</string>
    <string name="situations">Situations</string>
    <string name="in_total">In Total</string>
    <string name="recent">Recent Connections</string>
    <string name="name">Name</string>
    <string name="change_name_email">Change Name or Email</string>
    <string name="change_name">Change Name:</string>
    <string name="email">Email</string>
    <string name="change_email">Change Email:</string>
    <string name="change">Change</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>