<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment"
    android:id="@+id/firstFragmentLayout"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp">

<RelativeLayout
        android:id="@+id/timeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/txtTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtTimeFire"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtTime"
            android:text="@string/placeholder"
            android:textSize="15sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/importantEventsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/timeLayout"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/txtImportant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/important"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/txtImportant">

            <TextView
                android:id="@+id/txtImportantFire"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder"
                android:textSize="15sp" />

        </ScrollView>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/situationsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/importantEventsLayout"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/txtSituations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/situations"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_below="@+id/txtSituations">

            <TextView
                android:id="@+id/txtSituationsFire"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder"
                android:textSize="15sp" />

        </ScrollView>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/inTotalLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/situationsLayout"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/txtInTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/in_total"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_below="@+id/txtInTotal">

            <TextView
                android:id="@+id/txtInTotalFire"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder"
                android:textSize="15sp" />
        </ScrollView>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/recentLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inTotalLayout"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/txtRecent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recent"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/txtRecent">

            <TextView
                android:id="@+id/txtRecentFire"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder"
                android:textSize="15sp" />
        </ScrollView>

    </RelativeLayout>

</RelativeLayout>