<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/mainLayout">

    <RelativeLayout
        android:id="@+id/imageLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="50dp"
            android:minWidth="50dp"
            android:minHeight="50dp"
            android:src="@mipmap/ic_power_round" />

        <Button
            android:id="@+id/btnPower"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="50dp"
            android:layout_toEndOf="@id/image"
            android:width="200dp"
            android:height="75dp"
            android:backgroundTint="@color/red"
            android:text="@string/off"
            android:textSize="30sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageLayout"
        android:id="@+id/nameLayout">

        <Button
            android:id="@+id/btnChangeNameEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="25dp"
            android:backgroundTint="@color/purple_200"
            android:text="@string/change_name_email"
            android:textSize="15sp" />


    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/txtLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameLayout"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/notifiers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notifiers"
            android:textSize="17sp" />

        <Spinner
            android:id="@+id/notifierSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/notifiers"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="70dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_below="@id/notifierSpinner"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:id="@+id/chkboxLine1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/chkbox1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:width="0dp"
                    android:text="@string/placeholder" />

                <CheckBox
                    android:id="@+id/chkbox2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:width="0dp"
                    android:text="@string/placeholder" />

                <CheckBox
                    android:id="@+id/chkbox3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:width="0dp"
                    android:text="@string/placeholder" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/chkboxLine2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/chkboxLine1"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/chkbox4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:width="0dp"
                    android:text="@string/placeholder" />

                <CheckBox
                    android:id="@+id/chkbox5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:width="0dp"
                    android:text="@string/placeholder" />

                <CheckBox
                    android:id="@+id/chkbox6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:width="0dp"
                    android:text="@string/placeholder" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/chkboxLine3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/chkboxLine2"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/chkbox7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:width="0dp"
                    android:text="@string/placeholder" />

                <CheckBox
                    android:id="@+id/chkbox8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:width="0dp"
                    android:text="@string/placeholder" />

                <CheckBox
                    android:id="@+id/chkbox9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:width="0dp"
                    android:text="@string/placeholder" />

            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/recentLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtLayout"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp">

        <TextView
            android:id="@+id/txtRecent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recent"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/txtRecent">

            <TextView
                android:id="@+id/txtRecentFire"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder"
                android:textSize="17sp" />
        </ScrollView>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/bottomLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/recentLayout">

        <Button
            android:id="@+id/btnReport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:width="200dp"
            android:height="75dp"
            android:text="@string/report"
            android:textSize="17sp" />

        <Button
            android:id="@+id/btnLive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnReport"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:width="200dp"
            android:height="75dp"
            android:backgroundTint="@color/purple_700"
            android:text="@string/live"
            android:textSize="17sp" />

    </RelativeLayout>

</RelativeLayout>